--- a/src/components/external-links.scss
+++ b/src/components/external-links.scss
@@ -1,6 +1,5 @@
 .external-links {
   display: flex;
-  margin-top: -36px;
 
   a {
     width: 40px;
@@ -16,8 +15,4 @@
     width: 100%;
     height: 100%;
   }
-}
-
-a svg {
-  fill: currentColor;
 }
