--- a/src/skeletons.scss
+++ b/src/skeletons.scss
@@ -22,31 +22,18 @@
   h3,
   h4,
   p {
-    color: rgba(0, 0, 0, 0);
-    border-radius: 4px;
-    margin-bottom: 8px !important;
     width: 100%;
-    height: 9em;
+    height: 1em;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    color: transparent;
     animation: var(--skeleton-animation);
   }
-
-  h3 {
-    height: 1.5em;
-  }
-  
-  h4 {
-    height: 1em;
-  }
-  
-  p {
-    height: 1em;
-  }
-  
   
   img,
   .img {
-    animation: var(--skeleton-animation);
-    max-width: 100%;
     display: block;
+    max-width: 100%;
+    animation: var(--skeleton-animation);
   }
 }
